# pokepocket

./: .gitignore  README.md  all_cards.csv  pyproject.toml
decks/: deck_example.csv
src/: app.py  checker.py
